--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "locale:read": "find ./app -type f | node_modules/.bin/open-i18n read > bin/locale/application.pot && msgmerge -UN --no-wrap ./bin/locale/en.po ./bin/locale/application.pot && msgmerge -UN --no-wrap ./bin/locale/zh.po ./bin/locale/application.pot",
     "locale:write": "./bin/write.js ./bin/locale/zh.po zh && ./bin/write.js ./bin/locale/en.po en",
     "apidocs": "apidoc -i ./app -o ./docs/apidocs/ -f '.*\\.js$'",
-    "setup": "npm install && ./bin/setup"
+    "setup": "npm install && ./bin/setup",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
